--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ImageRecognizer</string>
+    <string name="app_name">Make My Word</string>
 
     <string name="action_settings">Settings</string>
     <string name="label_whatis">What is</string>
@@ -8,4 +8,12 @@
     <string name="text_image_not_recognized">Shit</string>
     <string name="action_share">Tell friends</string>
     <string name="toast_cleared">Cleared</string>
+    <string name="title_activity_main">Translator</string>
+
+    <string-array name="languages">
+        <item>english_key:eng:en</item>
+        <item>korean_key:kor:ko</item>
+    </string-array>
+    <string name="english_key">English</string>
+    <string name="korean_key">Korean</string>
 </resources>
